--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ executors:
     resource_class: arm.large
 
 setup-env: &setup-env
-  FIL_PROOFS_PARAMETER_CACHE: "/tmp/filecoin-proof-parameters/"
+  FIL_PROOFS_PARAMETER_CACHE: "/mnt/lotus/zhangzhichaoHome/tmp/filecoin-proof-parameters/"
   RUST_LOG: info
 
 
@@ -324,7 +324,7 @@ jobs:
             docker run
             --security-opt seccomp=unconfined
             -v "${PWD}:/volume"
-            -v "${FIL_PROOFS_PARAMETER_CACHE}:/var/tmp/filecoin-proof-parameters/"
+            -v "${FIL_PROOFS_PARAMETER_CACHE}:/mnt/lotus/zhangzhichaoHome/var/tmp/filecoin-proof-parameters/"
             xd009642/tarpaulin
             sh -c "apt update && apt install -y libssl-dev ocl-icd-opencl-dev libhwloc-dev && cargo tarpaulin --timeout 1800 --release -v"
           no_output_timeout: 30m
@@ -337,11 +337,11 @@ commands:
       - run:
           name: Build paramcache if it doesn't already exist
           command: |
-            set -x; test -f /tmp/paramcache.awesome \
-            || (cargo build --release --bin paramcache && find . -type f -name paramcache | xargs -I {} mv {} /tmp/paramcache.awesome)
+            set -x; test -f /mnt/lotus/zhangzhichaoHome/tmp/paramcache.awesome \
+            || (cargo build --release --bin paramcache && find . -type f -name paramcache | xargs -I {} mv {} /mnt/lotus/zhangzhichaoHome/tmp/paramcache.awesome)
       - run:
           name: Obtain filecoin groth parameters
-          command: /tmp/paramcache.awesome --sector-sizes='2048,4096,16384,32768'
+          command: /mnt/lotus/zhangzhichaoHome/tmp/paramcache.awesome --sector-sizes='2048,4096,16384,32768'
           no_output_timeout: 60m
       - run:
           name: Obtain filecoin ipp parameter file
@@ -358,20 +358,20 @@ commands:
     steps:
       # Move things from the home directory to `/tmp` first, so that it can be
       # restored on executors that have a different home directory.
-      - run: cp -R ~/.cargo ~/.rustup /tmp/
+      - run: cp -R ~/.cargo ~/.rustup /mnt/lotus/zhangzhichaoHome/tmp/
       - save_cache:
           name: "Save rustup cache"
           key: cargo-v28-e-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
           paths:
-            - /tmp/.cargo
-            - /tmp/.rustup
+            - /mnt/lotus/zhangzhichaoHome/tmp/.cargo
+            - /mnt/lotus/zhangzhichaoHome/tmp/.rustup
   restore_rustup_cache:
     steps:
       - restore_cache:
           name: "Restore rustup cache"
           key: cargo-v28-e-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
       # Cache might not be created yet, hence ignore if the move fails
-      - run: cp -R /tmp/.cargo /tmp/.rustup ~/ || true
+      - run: cp -R /mnt/lotus/zhangzhichaoHome/tmp/.cargo /mnt/lotus/zhangzhichaoHome/tmp/.rustup ~/ || true
   save_parameter_cache:
     steps:
       # Make sure we have different cache for Linux and Darwin.
@@ -380,8 +380,8 @@ commands:
           name: "Save parameter cache"
           key: proof-params-v28-l-{{ checksum "os.txt" }}-{{ checksum "filecoin-proofs/parameters.json" }}
           paths:
-            - "/tmp/paramcache.awesome"
-            - "/tmp/filecoin-proof-parameters/"
+            - "/mnt/lotus/zhangzhichaoHome/tmp/paramcache.awesome"
+            - "/mnt/lotus/zhangzhichaoHome/tmp/filecoin-proof-parameters/"
   restore_parameter_cache:
     steps:
       # Make sure we have different cache for Linux and Darwin.
